--- a/server/package.json
+++ b/server/package.json
@@ -2,12 +2,12 @@
   "name": "server",
   "version": "1.0.0",
   "description": "Server REST API for Angular SoftUni exa April, 2024",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "Jenny Guteva Jen",
+  "author": "Jenny Guteva",
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^3.1.0"
