--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "^16.2.0",
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
+    "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^16.2.0",
     "@angular/material": "~16.2.14",
     "@angular/platform-browser": "^16.2.0",
