--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.3",
     "express-handlebars": "^7.1.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.2.2"
+    "mongoose": "^8.2.2",
+    "validator": "^13.11.0"
   }
 }
