--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "express-handlebars": "^7.1.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.2",
+    "prettier": "^3.2.5",
     "validator": "^13.11.0"
   }
 }
