--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "concurrently": "^8.2.2"
   },
   "scripts": {
-    "start": "concurrently \"cd client && ng serve\" \"cd server && npm start\""
+    "start": "concurrently \"cd client && ng serve\" \"cd server && npm start\"",
+    "seed": "node ./server/seed.js"
   }
 }
