Changed command for start concurrently the FE and BE to start-all in script in package.json on root

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "install-all": "npm install && cd server && npm install && cd ../client && npm install && cd ..",
-    "start": "concurrently \"cd client && ng serve\" \"cd server && npm start\"",
+    "start-all": "concurrently \"cd client && ng serve\" \"cd server && npm start\"",
     "seed": "node ./server/seed.js"
   }
 }
